container-image-factory-w-argo/argo-events/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook
  namespace: argo-events
spec:
  ingressClassName: nginx
  rules:
  - host: argo-events.coldbrewlabs.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: github-webhook-eventsource-svc
            port:
              number: 12000
